# reusable-testable-arduino-tutorial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: firmware-ci.yml
sketches/MagicCarController/: MagicCarController.ino
sketches/MagicCarControllerTestable/: ArduinoPinController.cpp  ArduinoPinController.h  Car.h  Esp32RestServer.cpp  Esp32RestServer.h  MagicCar.cpp  MagicCar.h  MagicCarController.cpp  MagicCarController.h  MagicCarControllerTestable.ino  MagicRestServer.cpp  PinController.h  RestServer.h
sketches/calculator/: Calculator.cpp  Calculator.h  calculator.ino
test/: CMakeLists.txt
test/mocks/: MockCar.hpp  MockPinController.hpp  MockRestServer.hpp
test/ut/: MagicCarController_test.cpp  calculator_test.cpp
